# flatcraft

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Makefile  README.md  common.mk  pyproject.toml
.github/: BRANCH_PROTECTION.md  dependabot.yml
.github/workflows/: docs.yaml  lint.yaml  publish.yaml  tests.yaml
docs/: conf.py  flatcraft-yaml.rst  getting-started.rst  index.rst
docs/api/: index.rst  modules.rst
flatcraft/: __init__.py  application.py  cli.py  errors.py
flatcraft/models/: __init__.py  project.py
flatcraft/services/: __init__.py  lifecycle.py
snap/: snapcraft.yaml
tests/: conftest.py
tests/unit/: test_application.py  test_cli.py  test_errors.py  test_lifecycle.py
tests/unit/models/: test_project.py
